@@ -15,9 +15,9 @@
  *
  */
 
-package de.bushnaq.abdalla.projecthub.dao;
+package de.bushnaq.abdalla.projecthub.api;
 
-import de.bushnaq.abdalla.projecthub.dto.Product;
+import de.bushnaq.abdalla.projecthub.dto.Version;
 import de.bushnaq.abdalla.projecthub.util.AbstractEntityGenerator;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -37,10 +37,9 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @AutoConfigureMockMvc
 @Transactional
-public class ProductTest extends AbstractEntityGenerator {
+public class VersionTest extends AbstractEntityGenerator {
     private static final long   FAKE_ID     = 999999L;
     private static final String SECOND_NAME = "SECOND_NAME";
-
 
     @Test
     public void create() throws Exception {
@@ -49,15 +48,16 @@ public class ProductTest extends AbstractEntityGenerator {
 
     @Test
     public void delete() throws Exception {
+        //create the users
         addRandomProducts(2);
-        removeProduct(expectedProducts.get(0).getId());
+        removeVersion(expectedVersions.getFirst().getId());
     }
 
     @Test
     public void deleteUsingFakeId() throws Exception {
         addRandomProducts(2);
         try {
-            removeProduct(FAKE_ID);
+            removeVersion(FAKE_ID);
         } catch (ServerErrorException e) {
             //expected
         }
@@ -66,22 +66,22 @@ public class ProductTest extends AbstractEntityGenerator {
     @Test
     public void getAll() throws Exception {
         addRandomProducts(3);
-        List<Product> allProducts = productApi.getAll();
-        assertEquals(3, allProducts.size());
+        List<Version> allVersions = versionApi.getAll();
+        assertEquals(3, allVersions.size());
     }
 
     @Test
     public void getAllEmpty() throws Exception {
-        List<Product> allProducts = productApi.getAll();
+        List<Version> allVersions = versionApi.getAll();
+
     }
 
     @Test
     public void getByFakeId() throws Exception {
-
         addRandomProducts(1);
         try {
-            productApi.getById(FAKE_ID);
-            fail("Product should not exist");
+            versionApi.getById(FAKE_ID);
+            fail("Version should not exist");
         } catch (ServerErrorException e) {
             //expected
         }
@@ -89,35 +89,34 @@ public class ProductTest extends AbstractEntityGenerator {
 
     @Test
     public void getById() throws Exception {
-
         addRandomProducts(1);
-        Product product = productApi.getById(expectedProducts.getFirst().getId());
-        assertProductEquals(expectedProducts.getFirst(), product, true);//shallow test
+        Version version = versionApi.getById(expectedVersions.getFirst().getId());
+        assertVersionEquals(expectedVersions.getFirst(), version, true); //shallow test
     }
 
     @Test
     public void update() throws Exception {
         addRandomProducts(2);
-        Product product = expectedProducts.getFirst();
-        product.setName(SECOND_NAME);
-        updateProduct(product);
+        Version version = expectedVersions.getFirst();
+        version.setName(SECOND_NAME);
+        updateVersion(version);
     }
 
     @Test
     public void updateUsingFakeId() throws Exception {
         addRandomProducts(2);
-        Product product = expectedProducts.getFirst();
-        Long    id      = product.getId();
-        String  name    = product.getName();
-        product.setId(FAKE_ID);
-        product.setName(SECOND_NAME);
+        Version version = expectedVersions.getFirst();
+        Long    id      = version.getId();
+        String  name    = version.getName();
+        version.setId(FAKE_ID);
+        version.setName(SECOND_NAME);
         try {
-            updateProduct(product);
+            updateVersion(version);
             fail("should not be able to update");
         } catch (ServerErrorException e) {
             //expected
-            product.setId(id);
-            product.setName(name);
+            version.setId(id);
+            version.setName(name);
         }
     }
 }
